# database-dist

./: .gitignore  Makefile  README.md  docker-compose.factory.yml  docker-compose.src.yml  docker-compose.subset.yml  pyproject.toml
.github/workflows/: subset.yaml
condenser/: Dockerfile  READEME.md  config.genre.json  config.json  entrypoint.sh
condenser/configs/: config.genre.json  config.json
db-build/: Dockerfile  Dockerfile.actions  unpack.sh
factory/: Dockerfile  README.md  bulk.py  database.py  genres.py  main.py  names.py  pyproject.toml
