[tool.poetry]
name = "factory"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^15.3.1"
ipython = "^8.6.0"
SQLAlchemy = "^1.4.43"
mysqlclient = "^2.1.1"
click = "^8.1.3"
toposort = "^1.7"
psycopg2-binary = "^2.9.5"
mysql-connector-python = "^8.0.31"
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
