[tool.poetry]
name = "factory"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^15.3.1"
SQLAlchemy = "^1.4.43"
mysqlclient = "^2.1.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
